# snake

./: CMakeLists.txt  README.md  main.cpp
include/: common.h  field.h  input.h  renderer.h  snake.h
src/: common.cpp  field.cpp  input.cpp  renderer.cpp  snake.cpp
